# Graphics_project

./: CMakeLists.txt  Clipping.c  Clipping.h  ConverxFill.cpp  ConverxFill.h  NonConvics.cpp  NonConvics.h  Rectangle.c  Rectangle.h  Transformation.cpp  Transformation.h  cardinal_spline_curve.cpp  cardinal_spline_curve.h  circle.c  circle.cpp  circle.h  clipping.cpp  clippingCircle.cpp  clippingCircle.h  curve.cpp  curve.h  dataScreen.cpp  dataScreen.h  ellipse.cpp  ellipse.h  filling_curve.cpp  filling_curve.h  filling_quarter.cpp  filling_quarter.h  filling_quarters.cpp  floodfill.cpp  floodfill.h  line.cpp  line.h  main.c  main.cpp  rectangle.cpp  square.cpp  square.h
